<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShotRecharge</string>
    <string name="action_settings">Settings</string>
    <string name="Take_From_Camera">Take From Camera</string>
    <string name="Select_from_Gallery">Select from Gallery</string>
    <string name="Text_View">Extracted Text Will Be Here..!!</string>
    <string name="a_Balance">Acc Balance</string>
    <string name="n_Balance">Net Balance</string>
    <string name="m_Balance">Msg Balance</string>
</resources>
